# crafting-interpreters

./: pyproject.toml
lox/src/lox/: __main__.py  callable.py  error.py  expr.py  interpreter.py  lox_class.py  native_function.py  parser.py  return_class.py  stmt.py
lox2/: pyproject.toml
src/lox/: __init__.py  ast_printer.py  callable.py  environment.py  error.py  expr.py  interpreter.py  lox_class.py  lox_function.py  lox_instance.py  parser.py  resolver.py  scanner.py  stmt.py  token_type.py
tests/lox/: test_ast_printer.py  test_e2e.py  test_interpreter.py
tool/: generate_ast.py
