[tool.poetry]
name = "crafting-interpreters"
version = "0.1.0"
description = ""
authors = ["Michihiro Nakamura"]
readme = "README.md"
packages = [{ include = "lox2", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipython = "^8.17.2"
pytest = "^7.4.3"
ruff = "^0.1.6"
pytest-freezegun = "^0.4.2"

[tool.poetry.scripts]
lox2 = 'lox2:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
